--- a/app/src/main/res/layout/division_activity.xml
+++ b/app/src/main/res/layout/division_activity.xml
@@ -142,7 +142,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <GridLayout
-        android:id="@+id/scoreGrid"
+        android:id="@+id/personalBest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
