--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/landingMessage" />
 
     <Button
-        android:id="@+id/mode_button_1"
+        android:id="@+id/mode_button"
         android:layout_width="250dp"
         android:layout_height="80dp"
         android:layout_marginStart="50dp"
@@ -89,7 +89,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mode_button_1" />
+        app:layout_constraintTop_toBottomOf="@+id/mode_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
