sorted database issue and added personal bests to main menu

--- a/app/src/main/res/layout/main_menu_item.xml
+++ b/app/src/main/res/layout/main_menu_item.xml
@@ -7,14 +7,14 @@
 
     <Button
         android:id="@+id/mode_button"
-        android:layout_width="194dp"
-        android:layout_height="60dp"
+        android:layout_width="177dp"
+        android:layout_height="59dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:height="180dp"
         android:tag="1"
         android:text="@string/mode_button"
-        android:textSize="25sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="30dp"
         app:columnCount="5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,50 +33,35 @@
             android:id="@+id/star0"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:scaleX="0"
-            android:scaleY="0"
             app:layout_column="0"
-            app:layout_row="0"
-            app:srcCompat="@drawable/star" />
+            app:layout_row="0" />
 
         <ImageView
             android:id="@+id/star1"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:scaleX="0"
-            android:scaleY="0"
             app:layout_column="1"
-            app:layout_row="0"
-            app:srcCompat="@drawable/star" />
+            app:layout_row="0" />
 
         <ImageView
             android:id="@+id/star2"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:scaleX="0"
-            android:scaleY="0"
             app:layout_column="2"
-            app:layout_row="0"
-            app:srcCompat="@drawable/star" />
+            app:layout_row="0" />
 
         <ImageView
             android:id="@+id/star3"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:scaleX="0"
-            android:scaleY="0"
             app:layout_column="3"
-            app:layout_row="0"
-            app:srcCompat="@drawable/star" />
+            app:layout_row="0" />
 
         <ImageView
             android:id="@+id/star4"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:scaleX="0"
-            android:scaleY="0"
             app:layout_column="4"
-            app:layout_row="0"
-            app:srcCompat="@drawable/star" />
+            app:layout_row="0" />
     </GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
