--- a/app/src/main/res/drawable/play_again_button.xml
+++ b/app/src/main/res/drawable/play_again_button.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:color="@color/black"
-        android:width="4dp"/>
+    <stroke android:color="@color/white"
+        android:width="2dp"/>
 
     <corners android:radius="10dp"/>
 
