--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -9,23 +9,27 @@
     <TextView
         android:id="@+id/landingMessage"
         android:layout_width="352dp"
-        android:layout_height="121dp"
-        android:layout_marginStart="30dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="70dp"
+        android:layout_marginEnd="10dp"
         android:gravity="center|center_horizontal"
         android:text="@string/top_of_the_tables"
         android:textColor="#0B0B0B"
         android:textSize="48sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/modeView"
-        android:layout_width="409dp"
+        android:layout_width="390dp"
         android:layout_height="508dp"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/landingMessage" />
 
