--- a/app/src/main/res/layout/multiplication_activity.xml
+++ b/app/src/main/res/layout/multiplication_activity.xml
@@ -118,6 +118,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="70dp"
         android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
